examples/test/testpolicy9917.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9917
  namespace: namespace306
spec:
  podSelector:
    matchLabels:
      key32: value45
      key46: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value0
          key3: value1
      podSelector:
        matchLabels:
          key37: value35
          key9: value20
